--- a/HCD-2-E1-Layout/style.css
+++ b/HCD-2-E1-Layout/style.css
@@ -18,6 +18,20 @@ body {
 	background-color: #f4f4f4;
 	padding: 10px 0;
 	/* Add properties for flexbox below this comment */
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
 }
 
 /* Learners will add the rest of their CSS below this line */
+
+.container {
+	padding: 20px;
+	display: grid;
+	gap: 20px;
+	grid-template-columns: 70% 20%;
+}
+
+.main-content,
+.sidebar {
+}
