--- a/HCD-3-E1-Media Queries/style.css
+++ b/HCD-3-E1-Media Queries/style.css
@@ -71,3 +71,16 @@ nav {
 }
 
 /* Learners will add the rest of their CSS below this line */
+
+@media (max-width: 768px) {
+	.container {
+		grid-template-columns: 1fr;
+	}
+}
+
+@media (max-width: 480px) {
+	.texts,
+	.images {
+		grid-template-columns: 1fr;
+	}
+}
